# SkyPro_HomeWork_3.4.2

./: .gitignore  pyproject.toml
tests/: test_arrs.py
